Added a project roadmap to the Translations page.

--- a/translations.html
+++ b/translations.html
@@ -17,5 +17,30 @@ title: Dharma Pearls | Translations
     <li><a class="title" href="02_avadana/dharmapada/T211/">Dharma Verse Stories</a> (T211)</li>
     <li><strong>Illuminations</strong> (A collection of <em>udānas</em> with illustrative stories)</li>
   </ul>
-  <p>While there are many other early Buddhist texts in Chinese, this initial set of texts comprise a total of 1,422 pages of the Taisho, which will probably translate to around 1.7 million words of English.</p>
+  <p>While there are many other early Buddhist texts in Chinese, this initial set of texts comprise a total of 1,422 pages of the Taisho, which will probably translate to around 1.7 million words of English. As a result, this project is expected to require several years to complete.</p>
+<hr style="margin-top: 2em; margin-bottom: 2em;" />
+  <h2>Project Roadmap</h2>
+
+  <h3>Phase 1: Initial Study and Pilot Translations (2018-2019)<h3>
+    <p>The concept for this project arose in late 2018 and developed in early 2019 when I discovered my attempts to translate Āgama sutras in 2004-2005 were still preserved at SuttaCentral. I was already planning to begin translating Buddhist texts again, and I saw the need to update these old and error-prone translations.</p>
+    <p>Most of 2019 was spent becoming familiar with the language and vocabulary of each of the four Āgamas and pursuing background research, such as how they were translated to Chinese and other text critical issues (e.g., the disorganization of the <em>Samyuka Āgama</em>). In September, I created this Github website using the Jekyll platform.</p>
+<hr style="margin-top: 2em; margin-bottom: 2em; margin-left: auto; margin-right: auto; width: 50%;" />
+  <h3>Phase 2: <em>Madhyama Āgama</em> and Selected Parallels (2020)</h3>
+    <p>In early 2020, the project shifted to a concerted effort to translate the portion of the <em>Madhyama Āgama</em> that had yet to be published by <a href="https://bdkamerica.org/tripitaka-list/">BDK</a> (only <a href="https://bdkamerica.org/product/the-madhyama-agama-middle-length-discourses-volume-i/">Vol. I of their translation</a> was available at the time).
+    <p>Funding was secured for a full-time translation project in mid-2020. The initial goal was to translate the Chinese Āgama parallels for a selection of important Pali suttas. This work continued until 2021.</p>
+<hr style="margin-top: 2em; margin-bottom: 2em; margin-left: auto; margin-right: auto; width: 50%;" />
+  <h3>Phase 3: Translation of the <em>Dīrgha Āgama</em> (2021-2022)</h3>
+    <p>After the completion of the initial parallels translation, a more ambitious goal of translating the entire <em>Dīrgha Āgama</em> was approved, and funding was extended into 2022.</p>
+    <p>As of September 2021, 21 DĀ sutras have been translated and released, amounting to close to 40% of the entire collection by length. The current schedule for the remainder of the <em>Dīrgha Āgama</em> is as follows (give or take a month or two):
+      <ul class="list-style-none">
+        <li>September 2021: DĀ 3, 14, 15, 17</li>
+        <li>October 2021: DĀ 7, 10, 23</li>
+        <li>November 2021: DĀ 1</li>
+        <li>December 2021: DĀ 2, 19</li>
+        <li>January-February 2022: DĀ 30</li>
+      </ul>
+      <hr style="margin-top: 2em; margin-bottom: 2em; margin-left: auto; margin-right: auto; width: 50%;" />
+  <h3>Phase 4: Translation of the <em>Ekottarika Āgama</em> (2022-2024?)</h3>
+    <p>With the completion of Phase 3 approaching on the horizon, tentative plans are in place to take up the <em>Ekottarika Āgama</em> as the next major project. If the needed funding can be secured, this should begin in Spring of 2022 and continue to early 2024.</p>
+    <hr style="margin-top: 2em; margin-bottom: 2em;" />
 </article>
