--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>19-Oct-2021</dt>
+    <dd>Added <a href="01_agama/dirgha/DA_17.html">DĀ 17 Purification</a></dd>
   <dt>7-Oct-2021</dt>
     <dd>Added <a href="01_agama/dirgha/DA_15.html">DĀ 15 Anomiya</a></dd>
     <dd>Web design changes: Switched to Google Fonts (Merriweather, Noto Serif, and Noto Sans), softened the yellow background, and changed link styling.</dd>
