--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>2-Nov-2021</dt>
+    <dd>Added <a href="01_agama/dirgha/DA_7.html">DĀ 7 Padāśva</a></dd>
   <dt>19-Oct-2021</dt>
     <dd>Added <a href="01_agama/dirgha/DA_17.html">DĀ 17 Purification</a></dd>
   <dt>7-Oct-2021</dt>
