Reformated SA indices, revised SA 1.1-10, added MA 210.

--- a/translations.html
+++ b/translations.html
@@ -6,16 +6,30 @@ title: Dharma Pearls | Translations
 <article class="home">
   <h1>Current Translation Projects</h1>
   <p>The first long-term goal of <em>Dharma Pearls</em> is to produce English translations of the four Chinese Āgama collections and select early Buddhist texts like the Chinese Dharmapāda from the <em>Taisho</em> canon.</p>
-  <p>The list of texts currently slated for translation includes:</p>
-  <ul class="list-style-disc">
-    <li><a class="title" href="01_agama/dirgha/">The Long Discourses</a> (Skt. <em>Dīrgha-āgama</em>)</li>
-    <li><a class="title" href="01_agama/madhyama/">The Medium Discourses</a> (Skt. <em>Madhyama-āgama</em>)</li>
-    <li><a class="title" href="01_agama/samyukta/">The Related Discourses</a> (Skt. <em>Saṃyukta-āgama</em>)</li>
-    <li><a class="title" href="01_agama/ekottarika/">The Numerical Discourses</a> (Skt. <em>Ekottarika-āgama</em>)</li>
-    <li><strong>Past Events</strong> (Skt. <em>Itivṛttaka</em>)</li>
-    <li><strong>Dharma Verses</strong> (Skt. <em>Dharmapāda</em>)</li>
-    <li><a class="title" href="02_avadana/dharmapada/T211/">Dharma Verse Stories</a> (T211)</li>
-    <li><strong>Illuminations</strong> (A collection of <em>udānas</em> with illustrative stories)</li>
+  <p>Below is a list of texts actively being translated:</p>
+
+  <ul class="list-style-none">
+    <li><strong>Dharmaguptaka Sūtras</strong></li>
+    <ul class="list-style-disc no-indent">
+      <li><a class="title" href="01_agama/dirgha/">The Long Discourses</a> (Skt. <em>Dīrgha-āgama</em>, T 1)</li>
+      <li>Extracts from the <span class="title">Śāriputra Abhidharma</span> (T 1548)</li>
+    </ul>
+    <li><strong>Sarvâstivāda Sūtras</strong></li>
+    <ul class="list-style-disc no-indent">
+      <li><a class="title" href="01_agama/madhyama/">The Medium Discourses</a> (Skt. <em>Madhyama-āgama</em>, T 26)</li>
+      <li><a class="title" href="01_agama/samyukta/">The Related Discourses</a> (Skt. <em>Saṃyukta-āgama</em>, T 99)</li>
+    </ul>
+    <li><strong>Sūtras of Undetermined Provenance</strong></li>
+    <ul class="list-style-disc no-indent">
+      <li><a class="title" href="01_agama/ekottarika/">The Numerical Discourses</a> (Skt. <em>Ekottarika-āgama</em>, T 125)</li>
+      <li><strong>Past Events</strong> (Skt. <em>Itivṛttaka</em>, T 765)</li>
+    </ul>
+    <li><strong>Dharmapāda Texts</strong></li>
+    <ul class="list-style-disc no-indent">
+      <li><strong>Dharma Verses</strong> (Skt. <em>Dharmapāda</em>, T 210)</li>
+      <li><a class="title" href="02_avadana/dharmapada/T211/">Dharma Verse Stories</a> (T 211)</li>
+      <li><strong>Illuminations</strong> (Skt. <em>Udāna</em>, T 212)</li>
+    </ul>
   </ul>
   <p>While there are many other early Buddhist texts in Chinese, this initial set of texts comprise a total of 1,422 pages of the Taisho, which will probably translate to around 1.7 million words of English. As a result, this project is expected to require several years to complete.</p>
 <hr style="margin-top: 2em; margin-bottom: 2em;" />
@@ -39,8 +53,9 @@ title: Dharma Pearls | Translations
         <li>December 2021: DĀ 2, 19</li>
         <li>January-February 2022: DĀ 30</li>
       </ul>
+      <p>Update (March 30): The schedule has slipped a couple months into the future. DĀ 1, 2, 19, and 30 are expected to be released by the end of May 2022.</p>
       <hr style="margin-top: 2em; margin-bottom: 2em; margin-left: auto; margin-right: auto; width: 33%;" />
   <h3>Phase 4: Translation of the <em>Ekottarika Āgama</em> (2022-2024?)</h3>
-    <p>With the completion of Phase 3 approaching on the horizon, tentative plans are in place to take up the <em>Ekottarika Āgama</em> as the next major project. If the needed funding can be secured, this should begin in Spring of 2022 and continue to early 2024.</p>
+    <p>With the completion of Phase 3 approaching on the horizon, tentative plans are in place to take up the <em>Ekottarika Āgama</em> as the next major project. If the needed funding can be secured, this should begin in Summer of 2022 and continue to early 2024.</p>
     <hr style="margin-top: 2em; margin-bottom: 2em;" />
 </article>
