Added DA 2 and fixed up files for MA 15, 55, SA 3.1-2, etc.

--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,13 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>9-May-2022</dt>
+  <dd>Translations added:</dd>
+    <dd><a href="01_agama/dirgha/DA_2.html">DĀ 2 The Final Journey</a></dd>
+    <dd><a href="01_agama/madhyama/MA_015.html">MĀ 15 Intention</a></dd>
+    <dd><a href="01_agama/madhyama/MA_055.html">MĀ 55 Nirvāṇa</a></dd>
+    <dd><a href="01_agama/samyukta/03/SA3_1.html">SĀ 3.1 (283) Planting a Tree</a></dd>
+    <dd><a href="01_agama/samyukta/03/SA3_2.html">SĀ 3.2 (284) A Great Tree</a></dd>
   <dt>17-Apr-2022</dt>
     <dd>Added <a href="01_agama/dirgha/DA_1.html">DĀ 1 The Great Legend</a></dd>
   <dt>25-Mar-2022</dt>
