Added Chapter 12 of DA 30.

--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>3-Jul-2022</dt>
+    <dd><a href="01_agama/dirgha/DA_30-12.html">DĀ 30, Chapter 12: The Origins of the World</a> added</dd>
   <dt>1-Jul-2022</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/dirgha/DA_30-8.html">DĀ 30, Chapter 8: The Trāyastriṃśa Gods</a></dd>
