--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,11 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>28-Nov-2022</dt>
+    <dd><a href="01_agama/madhyama/MA_056.html">MĀ 56 Meghiya</a></dd>
+    <dd><a href="01_agama/madhyama/MA_058.html">MĀ 58 The Seven Treasures</a></dd>
+    <dd><a href="01_agama/madhyama/MA_084.html">MĀ 84 Thornless</a></dd>
+    <dd><a href="01_agama/madhyama/MA_127.html">MĀ 127 Fields of Merit</a></dd>
   <dt>30-Jul-2022</dt>
     <dd><a href="01_agama/dirgha/DA_19.html">DĀ 19 The Great Congregation</a> added</dd>
     <dd>The initial release of the Long Discourses is complete!</dd>
