--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>15-Jan-2023</dt>
+    <dd><a href="01_agama/madhyama/MA_153.html">MĀ 153 Sugandika</a></dd>
   <dt>7-Jan-2023</dt>
     <dd><a href="01_agama/ekottarika/01/EA_01_01.html">EĀ 1.1 Introduction</a></dd>
   <dt>28-Nov-2022</dt>
