Added EA 3.3-4 and clarified passage in DA 5.

--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,12 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>31-January-2023</dt>
+    <dd><a href="01_agama/ekottarika/03/EA_03_03.html">EĀ 3.3 The Saṅgha</a></dd>
+    <dd><a href="01_agama/ekottarika/03/EA_03_04.html">EĀ 3.4 The Precepts</a></dd>
+  <dt>30-January-2023</dt>
+    <dd><a href="01_agama/ekottarika/03/EA_03_01.html">EĀ 3.1 The Buddha</a></dd>
+    <dd><a href="01_agama/ekottarika/03/EA_03_02.html">EĀ 3.2 The Dharma</a></dd>
   <dt>15-Jan-2023</dt>
     <dd><a href="01_agama/madhyama/MA_153.html">MĀ 153 Sugandika</a></dd>
   <dt>7-Jan-2023</dt>
