--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,9 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>1-February-2023</dt>
+    <dd><a href="01_agama/ekottarika/03/EA_03_05.html">EĀ 3.5 Generosity</a></dd>
+    <dd><a href="01_agama/ekottarika/03/EA_03_06.html">EĀ 3.6 The Gods</a></dd>
   <dt>31-January-2023</dt>
     <dd><a href="01_agama/ekottarika/03/EA_03_03.html">EĀ 3.3 The Saṅgha</a></dd>
     <dd><a href="01_agama/ekottarika/03/EA_03_04.html">EĀ 3.4 The Precepts</a></dd>
