--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,11 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>6-February-2023</dt>
+    <dd><a href="01_agama/ekottarika/03/EA_03_07.html">EĀ 3.5 Peace</a></dd>
+    <dd><a href="01_agama/ekottarika/03/EA_03_08.html">EĀ 3.6 Breathing</a></dd>
+    <dd><a href="01_agama/ekottarika/03/EA_03_09.html">EĀ 3.5 The Body</a></dd>
+    <dd><a href="01_agama/ekottarika/03/EA_03_10.html">EĀ 3.10 Death</a></dd>
   <dt>1-February-2023</dt>
     <dd><a href="01_agama/ekottarika/03/EA_03_05.html">EĀ 3.5 Generosity</a></dd>
     <dd><a href="01_agama/ekottarika/03/EA_03_06.html">EĀ 3.6 The Gods</a></dd>
