--- a/whats-new.html
+++ b/whats-new.html
@@ -5,11 +5,17 @@ title: Dharma Pearls | What’s New
 ---
 <article class="home">
 <h1>What’s New</h1>
-<dl class="whats-new">
+  <dl class="whats-new">
+    <dt>7-February-2023</dt>
+    <dd><a href="01_agama/ekottarika/08/EA_08_01.html">EĀ 8.1 Asura</a></dd>
+    <dd><a href="01_agama/ekottarika/08/EA_08_02.html">EĀ 8.2 Beneficial</a></dd>
+    <dd><a href="01_agama/ekottarika/08/EA_08_03.html">EĀ 8.3 The Single-File Path</a></dd>
+    <dd><a href="01_agama/ekottarika/08/EA_08_04.html">EĀ 8.4 The Light</a></dd>
+    <dd><a href="01_agama/ekottarika/08/EA_08_05.html">EĀ 8.5 The Darkness</a></dd>
   <dt>6-February-2023</dt>
-    <dd><a href="01_agama/ekottarika/03/EA_03_07.html">EĀ 3.5 Peace</a></dd>
-    <dd><a href="01_agama/ekottarika/03/EA_03_08.html">EĀ 3.6 Breathing</a></dd>
-    <dd><a href="01_agama/ekottarika/03/EA_03_09.html">EĀ 3.5 The Body</a></dd>
+    <dd><a href="01_agama/ekottarika/03/EA_03_07.html">EĀ 3.7 Peace</a></dd>
+    <dd><a href="01_agama/ekottarika/03/EA_03_08.html">EĀ 3.8 Breathing</a></dd>
+    <dd><a href="01_agama/ekottarika/03/EA_03_09.html">EĀ 3.9 The Body</a></dd>
     <dd><a href="01_agama/ekottarika/03/EA_03_10.html">EĀ 3.10 Death</a></dd>
   <dt>1-February-2023</dt>
     <dd><a href="01_agama/ekottarika/03/EA_03_05.html">EĀ 3.5 Generosity</a></dd>
