--- a/whats-new.html
+++ b/whats-new.html
@@ -6,24 +6,35 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
-    <dt>7-February-2023</dt>
+  <dt>15-Feb-2023</dt>
+    <dd><a href="01_agama/ekottarika/08/EA_08_06.html">EĀ 8.6 Factors of the Path</a></dd>
+    <dd><a href="01_agama/ekottarika/08/EA_08_07.html">EĀ 8.7 Disappearance</a></dd>
+    <dd><a href="01_agama/ekottarika/08/EA_08_08.html">EĀ 8.8 Belief</a></dd>
+    <dd><a href="01_agama/ekottarika/08/EA_08_09.html">EĀ 8.9 Flourishing</a></dd>
+    <dd><a href="01_agama/ekottarika/08/EA_08_10.html">EĀ 8.10 Unmatched</a></dd>
+    <dd><a href="01_agama/ekottarika/09/EA_09_01.html">EĀ 9.1 The Laywoman</a></dd>
+    <dd><a href="01_agama/ekottarika/09/EA_09_02.html">EĀ 9.2 The Laywoman (2)</a></dd>
+    <dd><a href="01_agama/ekottarika/09/EA_09_03.html">EĀ 9.3 The Mind</a></dd>
+    <dd><a href="01_agama/ekottarika/09/EA_09_04.html">EĀ 9.4 The Mind (2)</a></dd>
+    <dd><a href="01_agama/ekottarika/09/EA_09_05.html">EĀ 9.5Downfall</a></dd>
+  <dt>7-Feb-2023</dt>
     <dd><a href="01_agama/ekottarika/08/EA_08_01.html">EĀ 8.1 Asura</a></dd>
     <dd><a href="01_agama/ekottarika/08/EA_08_02.html">EĀ 8.2 Beneficial</a></dd>
     <dd><a href="01_agama/ekottarika/08/EA_08_03.html">EĀ 8.3 The Single-File Path</a></dd>
     <dd><a href="01_agama/ekottarika/08/EA_08_04.html">EĀ 8.4 The Light</a></dd>
     <dd><a href="01_agama/ekottarika/08/EA_08_05.html">EĀ 8.5 The Darkness</a></dd>
-  <dt>6-February-2023</dt>
+  <dt>6-Feb-2023</dt>
     <dd><a href="01_agama/ekottarika/03/EA_03_07.html">EĀ 3.7 Peace</a></dd>
     <dd><a href="01_agama/ekottarika/03/EA_03_08.html">EĀ 3.8 Breathing</a></dd>
     <dd><a href="01_agama/ekottarika/03/EA_03_09.html">EĀ 3.9 The Body</a></dd>
     <dd><a href="01_agama/ekottarika/03/EA_03_10.html">EĀ 3.10 Death</a></dd>
-  <dt>1-February-2023</dt>
+  <dt>1-Feb-2023</dt>
     <dd><a href="01_agama/ekottarika/03/EA_03_05.html">EĀ 3.5 Generosity</a></dd>
     <dd><a href="01_agama/ekottarika/03/EA_03_06.html">EĀ 3.6 The Gods</a></dd>
-  <dt>31-January-2023</dt>
+  <dt>31-Jan-2023</dt>
     <dd><a href="01_agama/ekottarika/03/EA_03_03.html">EĀ 3.3 The Saṅgha</a></dd>
     <dd><a href="01_agama/ekottarika/03/EA_03_04.html">EĀ 3.4 The Precepts</a></dd>
-  <dt>30-January-2023</dt>
+  <dt>30-Jan-2023</dt>
     <dd><a href="01_agama/ekottarika/03/EA_03_01.html">EĀ 3.1 The Buddha</a></dd>
     <dd><a href="01_agama/ekottarika/03/EA_03_02.html">EĀ 3.2 The Dharma</a></dd>
   <dt>15-Jan-2023</dt>
