--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,10 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>3-March-2023</dt>
+    <dd><a href="01_agama/ekottarika/09/EA_09_06.html">EĀ 9.6 Birth in Heaven</a></dd>
+    <dd><a href="01_agama/ekottarika/09/EA_09_07.html">EĀ 9.7 A Man’s Perception</a></dd>
+    <dd><a href="01_agama/ekottarika/09/EA_09_08.html">EĀ 9.8 A Woman’s Perception</a></dd>
   <dt>15-Feb-2023</dt>
     <dd><a href="01_agama/ekottarika/08/EA_08_06.html">EĀ 8.6 Factors of the Path</a></dd>
     <dd><a href="01_agama/ekottarika/08/EA_08_07.html">EĀ 8.7 Disappearance</a></dd>
