--- a/whats-new.html
+++ b/whats-new.html
@@ -6,7 +6,12 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
-  <dt>3-March-2023</dt>
+  <dt>20-Mar-2023</dt>
+    <dd><a href="01_agama/ekottarika/09/EA_09_09.html">EĀ 9.9 Notions of Desire</a></dd>
+    <dd><a href="01_agama/ekottarika/09/EA_09_10.html">EĀ 9.10 Notions of Desire (2)</a></dd>
+    <dd><a href="01_agama/ekottarika/10/EA_10_01.html">EĀ 10.1 No Pride</a></dd>
+    <dd><a href="01_agama/ekottarika/10/EA_10_02.html">EĀ 10.2 No Pride (2)</a></dd>
+  <dt>3-Mar-2023</dt>
     <dd><a href="01_agama/ekottarika/09/EA_09_06.html">EĀ 9.6 Birth in Heaven</a></dd>
     <dd><a href="01_agama/ekottarika/09/EA_09_07.html">EĀ 9.7 A Man’s Perception</a></dd>
     <dd><a href="01_agama/ekottarika/09/EA_09_08.html">EĀ 9.8 A Woman’s Perception</a></dd>
