--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,10 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>23-Mar-2023</dt>
+    <dd><a href="01_agama/ekottarika/10/EA_10_03.html">EĀ 10.3 Recollecting Generosity</a></dd>
+    <dd><a href="01_agama/ekottarika/10/EA_10_04.html">EĀ 10.4 Generosity</a></dd>
+    <dd><a href="01_agama/ekottarika/10/EA_10_05.html">EĀ 10.5 Generosity (2)</a></dd>
   <dt>20-Mar-2023</dt>
     <dd><a href="01_agama/ekottarika/09/EA_09_09.html">EĀ 9.9 Notions of Desire</a></dd>
     <dd><a href="01_agama/ekottarika/09/EA_09_10.html">EĀ 9.10 Notions of Desire (2)</a></dd>
