--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,9 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>27-Mar-2023</dt>
+    <dd><a href="01_agama/ekottarika/10/EA_10_06.html">EĀ 10.6 The Stingy and the Tireless</a></dd>
+    <dd><a href="01_agama/ekottarika/10/EA_10_07.html">EĀ 10.7 Merits of Generosity</a></dd>
   <dt>23-Mar-2023</dt>
     <dd><a href="01_agama/ekottarika/10/EA_10_03.html">EĀ 10.3 Recollecting Generosity</a></dd>
     <dd><a href="01_agama/ekottarika/10/EA_10_04.html">EĀ 10.4 Generosity</a></dd>
