--- a/00_chinese_glossary/pronunciation.html
+++ b/00_chinese_glossary/pronunciation.html
@@ -956,7 +956,7 @@ title: Dharma Pearls | Home
 </tr>
 
 <tr style="font-weight: bold">
-  <td>毘</td><td>bier</td><td>bii</td><td>p‘i</td><td>p‘i</td><td>pí</td><td><em>698</em></td>
+  <td>毘 (毗)</td><td>bier</td><td>bii</td><td>p‘i</td><td>p‘i</td><td>pí</td><td><em>698</em></td>
 </tr>
 
 <tr style="font-weight: bold">
@@ -1269,7 +1269,51 @@ title: Dharma Pearls | Home
   <td>犂</td><td>ler</td><td>lei</td><td>liəi</td><td>li</td><td>lí</td><td><em>1551</em></td>
 </tr>
 
+<tr style="font-weight: bold">
+  <td>隨</td><td>ḍiuar (yiuĕ)</td><td>ziuĕ</td><td>suəi</td><td>suəi</td><td>suí</td><td><em>1428</em></td>
+</tr>
 
+<tr style="font-weight: bold">
+  <td>倪</td><td>ŋer</td><td>ŋei</td><td>niəi</td><td>ni</td><td>ní</td><td><em>80</em></td>
+</tr>
+
+<tr style="font-weight: bold">
+  <td>倪</td><td>ŋer</td><td>ŋei</td><td>niəi</td><td>ni</td><td>ní</td><td><em>80</em></td>
+</tr>
+
+<tr style="font-weight: bold">
+  <td>覩</td><td>tag</td><td>to</td><td>tu</td><td>tu</td><td>dǔ</td><td><em>1197>899</em></td>
+</tr>
+
+<tr style="font-weight: bold">
+  <td>汲</td><td>kɪəp</td><td>kɪəp</td><td>kiəi</td><td>ts̆i</td><td>jí</td><td><em>711</em></td>
+</tr>
+
+<tr style="font-weight: bold">
+  <td>訖</td><td>kɪət</td><td>kɪət</td><td>kiəi</td><td>ts̆‘i</td><td>qì</td><td><em>1205</em></td>
+</tr>
+
+<tr style="font-weight: bold">
+  <td>里</td><td>lɪəg</td><td>lɪei</td><td>li</td><td>li</td><td>lǐ</td><td><em>1360</em></td>
+</tr>
+
+<tr style="font-weight: bold">
+  <td>計</td><td>ker</td><td>kei</td><td>kiəi</td><td>ts̆i</td><td>jì</td><td><em>1204</em></td>
+</tr>
+
+<tr style="font-weight: bold">
+  <td>甚<sup>1</sup></td><td>dhiəm</td><td>ʒɪəm</td><td>ʃɪəm</td><td>ṣən</td><td>shèn</td><td><em>850</em></td>
+</tr>
+<tr style="font-weight: bold">
+  <td>甚<sup>2</sup></td><td>dhiəm</td><td>ʃɪəm</td><td>ʃɪəm</td><td>ṣən</td><td>shén</td><td><em>850</em></td>
+</tr>
+
+<tr style="font-weight: bold">
+  <td>墮<sup>1</sup></td><td>duar</td><td>dua</td><td>tuo</td><td>tuə</td><td>duǒ, duò</td><td><em>289>280</em></td>
+</tr>
+<tr style="font-weight: bold">
+  <td>墮<sup>2</sup></td><td>hiuə̆r</td><td>hiuĕ</td><td>huəi</td><td>huəi</td><td>huī</td><td><em>289>280</em></td>
+</tr>
 
 </table>
 </article>
