--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,15 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>2-Apr-2023</dt>
+    <dd><a href="01_agama/ekottarika/10/EA_10_08.html">EĀ 10.8 Māra the Wicked One</a></dd>
+    <dd><a href="01_agama/ekottarika/10/EA_10_09.html">EĀ 10.9 Bad Destinies</a></dd>
+    <dd><a href="01_agama/ekottarika/10/EA_10_10.html">EĀ 10.10 One Person</a></dd>
+    <dd><a href="01_agama/ekottarika/11/EA_11_01.html">EĀ 11.1 Non-Returning (1)</a></dd>
+    <dd><a href="01_agama/ekottarika/11/EA_11_02.html">EĀ 11.2 Non-Returning (2)</a></dd>
+    <dd><a href="01_agama/ekottarika/11/EA_11_03.html">EĀ 11.3 Non-Returning (3)</a></dd>
+    <dd><a href="01_agama/ekottarika/11/EA_11_04.html">EĀ 11.4 Non-Returning (4)</a></dd>
+    <dd><a href="01_agama/ekottarika/11/EA_11_05.html">EĀ 11.5 Heart</a></dd>
   <dt>27-Mar-2023</dt>
     <dd><a href="01_agama/ekottarika/10/EA_10_06.html">EĀ 10.6 The Stingy and the Tireless</a></dd>
     <dd><a href="01_agama/ekottarika/10/EA_10_07.html">EĀ 10.7 Merits of Generosity</a></dd>
