Added MA 57, MA 85, and EA 11.6.

--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,10 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>8-Apr-2023</dt>
+    <dd><a href="01_agama/ekottarika/11/EA_11_06.html">EĀ 11.6 Heart (2)</a></dd>
+    <dd><a href="01_agama/madhyama/MA_057.html">MĀ 57 A Teaching for the Monks</a></dd>
+    <dd><a href="01_agama/madhyama/MA_085.html">MĀ 85 The Genuine Person</a></dd>
   <dt>2-Apr-2023</dt>
     <dd><a href="01_agama/ekottarika/10/EA_10_08.html">EĀ 10.8 Māra the Wicked One</a></dd>
     <dd><a href="01_agama/ekottarika/10/EA_10_09.html">EĀ 10.9 Bad Destinies</a></dd>
