--- a/00_chinese_glossary/pronunciation.html
+++ b/00_chinese_glossary/pronunciation.html
@@ -1315,5 +1315,62 @@ title: Dharma Pearls | Home
   <td>墮<sup>2</sup></td><td>hiuə̆r</td><td>hiuĕ</td><td>huəi</td><td>huəi</td><td>huī</td><td><em>289>280</em></td>
 </tr>
 
+<tr style="font-weight: bold">
+  <td>若<sup>1</sup></td><td>niak</td><td>niak (rɪak)</td><td>rɪo</td><td>ruə</td><td>ruò</td><td><em>1097</em></td>
+</tr>
+<tr style="font-weight: bold">
+  <td>若<sup>2</sup></td><td>niăg</td><td>niă (rɪă)</td><td>rə</td><td>rə</td><td>rě</td><td><em>1097</em></td>
+</tr>
+
+<tr style="font-weight: bold">
+  <td>瞿<sup>1</sup></td><td>gɪuag (gɪuo)</td><td>gɪu</td><td>k‘iu</td><td>ts̆‘ü</td><td>qú</td><td><em>901</em></td>
+</tr>
+<tr style="font-weight: bold">
+  <td>瞿<sup>2</sup></td><td>kɪuag (kɪuo)</td><td>kɪu</td><td>kiu</td><td>ts̆ü</td><td>jù</td><td><em>901</em></td>
+</tr>
+<tr style="font-weight: bold">
+  <td>支</td><td>kieg</td><td>tʃɪĕ</td><td>ṭṣï</td><td>ṭṣï</td><td>zhī</td><td><em>562</em></td>
+</tr>
+<tr style="font-weight: bold">
+  <td>夷</td><td>d˳ier</td><td>yii</td><td>i</td><td>i</td><td>yí</td><td><em>313</em></td>
+</tr>
+<tr style="font-weight: bold">
+  <td>跋</td><td>buat</td><td>buat</td><td>po</td><td>pa</td><td>bá</td><td><em>1275</em></td>
+</tr>
+<tr style="font-weight: bold">
+  <td>驎 (麟)</td><td>lɪen</td><td>lɪĕn</td><td>liən</td><td>liən</td><td>lín</td><td><em>1547>1434</em></td>
+</tr>
+<tr style="font-weight: bold">
+  <td>微</td><td>mɪuər</td><td>mɪuəi (mbɪuəi)</td><td>wəi</td><td>uəi</td><td>wēi</td><td><em>449</em></td>
+</tr>
+<tr style="font-weight: bold">
+  <td>梨</td><td>lɪer</td><td>lɪi</td><td>li</td><td>li</td><td>lí</td><td><em>652</em></td>
+</tr>
+<tr style="font-weight: bold">
+  <td>肆</td><td>sier</td><td>sii</td><td>sï</td><td>sï</td><td>sì</td><td><em>1051</em></td>
+</tr>
+<tr style="font-weight: bold">
+  <td>波</td><td>puar</td><td>pua</td><td>po</td><td>po</td><td>bō</td><td><em>723</em></td>
+</tr>
+<tr style="font-weight: bold">
+  <td>脂</td><td>tier</td><td>tʃɪi</td><td>ṭṣï</td><td>ṭṣï</td><td>zhī</td><td><em>1060</em></td>
+</tr>
+<tr style="font-weight: bold">
+  <td>貴</td><td>kɪuəd</td><td>kɪuəi</td><td>kuəi</td><td>kuəi</td><td>guì</td><td><em>1255</em></td>
+</tr>
+<tr style="font-weight: bold">
+  <td>蘭</td><td>lan</td><td>lan</td><td>lan</td><td>lan</td><td>lán</td><td><em>1142</em></td>
+</tr>
+<tr style="font-weight: bold">
+  <td>閲</td><td>d˳iuat</td><td>yiuɛt</td><td>iue</td><td>üe</td><td>yuè</td><td><em>1407</em></td>
+</tr>
+<tr style="font-weight: bold">
+  <td>調<sup>1</sup></td><td>dog</td><td>deu</td><td>t'ieu</td><td>t'iau</td><td>tiao</td><td><em>1227</em></td>
+</tr>
+
+<tr style="font-weight: bold">
+  <td>調<sup>2</sup></td><td>dog</td><td>deu</td><td>tieu</td><td>tiau</td><td>diao</td><td><em>1227</em></td>
+</tr>
+
 </table>
 </article>
