--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,11 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>7-May-2023</dt>
+    <dd><a href="01_agama/ekottarika/11/EA_11_07.html">EĀ 11.7 Alms</a></dd>
+    <dd><a href="01_agama/ekottarika/11/EA_11_08.html">EĀ 11.8 Alms (2)</a></dd>
+    <dd><a href="01_agama/ekottarika/11/EA_11_09.html">EĀ 11.9 Devadatta</a></dd>
+    <dd><a href="01_agama/ekottarika/11/EA_11_10.html">EĀ 11.10 Devadatta (2)</a></dd>
   <dt>8-Apr-2023</dt>
     <dd><a href="01_agama/ekottarika/11/EA_11_06.html">EĀ 11.6 Heart (2)</a></dd>
     <dd><a href="01_agama/madhyama/MA_057.html">MĀ 57 A Teaching for the Monks</a></dd>
