--- a/whats-new.html
+++ b/whats-new.html
@@ -6,16 +6,27 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>29-Jun-2023</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/ekottarika/12/EA_12_02.html">EĀ 12.2 Spitefulness</a></dd>
+    <dd><a href="01_agama/ekottarika/12/EA_12_03.html">EĀ 12.3 The Most Honored</a></dd>
+    <dd><a href="01_agama/ekottarika/12/EA_12_04.html">EĀ 12.4 Watching over the Sick</a></dd>
+    <dd><a href="01_agama/ekottarika/12/EA_12_05.html">EĀ 12.5 Praise and Slander</a></dd>
+  <dt>28-Jun-2023</dt>
+    <dd>Revised <a href="01_agama/ekottarika/12/EA_12_01.html">EĀ 12.1 The Abodes of Mindfulness</a></dd>
   <dt>7-May-2023</dt>
+    <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/11/EA_11_07.html">EĀ 11.7 Alms</a></dd>
     <dd><a href="01_agama/ekottarika/11/EA_11_08.html">EĀ 11.8 Alms (2)</a></dd>
     <dd><a href="01_agama/ekottarika/11/EA_11_09.html">EĀ 11.9 Devadatta</a></dd>
     <dd><a href="01_agama/ekottarika/11/EA_11_10.html">EĀ 11.10 Devadatta (2)</a></dd>
   <dt>8-Apr-2023</dt>
+    <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/11/EA_11_06.html">EĀ 11.6 Heart (2)</a></dd>
     <dd><a href="01_agama/madhyama/MA_057.html">MĀ 57 A Teaching for the Monks</a></dd>
     <dd><a href="01_agama/madhyama/MA_085.html">MĀ 85 The Genuine Person</a></dd>
   <dt>2-Apr-2023</dt>
+    <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/10/EA_10_08.html">EĀ 10.8 Māra the Wicked One</a></dd>
     <dd><a href="01_agama/ekottarika/10/EA_10_09.html">EĀ 10.9 Bad Destinies</a></dd>
     <dd><a href="01_agama/ekottarika/10/EA_10_10.html">EĀ 10.10 One Person</a></dd>
@@ -25,22 +36,27 @@ title: Dharma Pearls | What’s New
     <dd><a href="01_agama/ekottarika/11/EA_11_04.html">EĀ 11.4 Non-Returning (4)</a></dd>
     <dd><a href="01_agama/ekottarika/11/EA_11_05.html">EĀ 11.5 Heart</a></dd>
   <dt>27-Mar-2023</dt>
+    <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/10/EA_10_06.html">EĀ 10.6 The Stingy and the Tireless</a></dd>
     <dd><a href="01_agama/ekottarika/10/EA_10_07.html">EĀ 10.7 Merits of Generosity</a></dd>
   <dt>23-Mar-2023</dt>
+    <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/10/EA_10_03.html">EĀ 10.3 Recollecting Generosity</a></dd>
     <dd><a href="01_agama/ekottarika/10/EA_10_04.html">EĀ 10.4 Generosity</a></dd>
     <dd><a href="01_agama/ekottarika/10/EA_10_05.html">EĀ 10.5 Generosity (2)</a></dd>
   <dt>20-Mar-2023</dt>
+  <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/09/EA_09_09.html">EĀ 9.9 Notions of Desire</a></dd>
     <dd><a href="01_agama/ekottarika/09/EA_09_10.html">EĀ 9.10 Notions of Desire (2)</a></dd>
     <dd><a href="01_agama/ekottarika/10/EA_10_01.html">EĀ 10.1 No Pride</a></dd>
     <dd><a href="01_agama/ekottarika/10/EA_10_02.html">EĀ 10.2 No Pride (2)</a></dd>
   <dt>3-Mar-2023</dt>
+    <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/09/EA_09_06.html">EĀ 9.6 Birth in Heaven</a></dd>
     <dd><a href="01_agama/ekottarika/09/EA_09_07.html">EĀ 9.7 A Man’s Perception</a></dd>
     <dd><a href="01_agama/ekottarika/09/EA_09_08.html">EĀ 9.8 A Woman’s Perception</a></dd>
   <dt>15-Feb-2023</dt>
+  <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/08/EA_08_06.html">EĀ 8.6 Factors of the Path</a></dd>
     <dd><a href="01_agama/ekottarika/08/EA_08_07.html">EĀ 8.7 Disappearance</a></dd>
     <dd><a href="01_agama/ekottarika/08/EA_08_08.html">EĀ 8.8 Belief</a></dd>
@@ -50,41 +66,47 @@ title: Dharma Pearls | What’s New
     <dd><a href="01_agama/ekottarika/09/EA_09_02.html">EĀ 9.2 The Laywoman (2)</a></dd>
     <dd><a href="01_agama/ekottarika/09/EA_09_03.html">EĀ 9.3 The Mind</a></dd>
     <dd><a href="01_agama/ekottarika/09/EA_09_04.html">EĀ 9.4 The Mind (2)</a></dd>
-    <dd><a href="01_agama/ekottarika/09/EA_09_05.html">EĀ 9.5Downfall</a></dd>
+    <dd><a href="01_agama/ekottarika/09/EA_09_05.html">EĀ 9.5 Downfall</a></dd>
   <dt>7-Feb-2023</dt>
+    <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/08/EA_08_01.html">EĀ 8.1 Asura</a></dd>
     <dd><a href="01_agama/ekottarika/08/EA_08_02.html">EĀ 8.2 Beneficial</a></dd>
     <dd><a href="01_agama/ekottarika/08/EA_08_03.html">EĀ 8.3 The Single-File Path</a></dd>
     <dd><a href="01_agama/ekottarika/08/EA_08_04.html">EĀ 8.4 The Light</a></dd>
     <dd><a href="01_agama/ekottarika/08/EA_08_05.html">EĀ 8.5 The Darkness</a></dd>
   <dt>6-Feb-2023</dt>
+    <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/03/EA_03_07.html">EĀ 3.7 Peace</a></dd>
     <dd><a href="01_agama/ekottarika/03/EA_03_08.html">EĀ 3.8 Breathing</a></dd>
     <dd><a href="01_agama/ekottarika/03/EA_03_09.html">EĀ 3.9 The Body</a></dd>
     <dd><a href="01_agama/ekottarika/03/EA_03_10.html">EĀ 3.10 Death</a></dd>
   <dt>1-Feb-2023</dt>
+    <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/03/EA_03_05.html">EĀ 3.5 Generosity</a></dd>
     <dd><a href="01_agama/ekottarika/03/EA_03_06.html">EĀ 3.6 The Gods</a></dd>
   <dt>31-Jan-2023</dt>
+    <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/03/EA_03_03.html">EĀ 3.3 The Saṅgha</a></dd>
     <dd><a href="01_agama/ekottarika/03/EA_03_04.html">EĀ 3.4 The Precepts</a></dd>
   <dt>30-Jan-2023</dt>
+    <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/03/EA_03_01.html">EĀ 3.1 The Buddha</a></dd>
     <dd><a href="01_agama/ekottarika/03/EA_03_02.html">EĀ 3.2 The Dharma</a></dd>
   <dt>15-Jan-2023</dt>
-    <dd><a href="01_agama/madhyama/MA_153.html">MĀ 153 Sugandika</a></dd>
+    <dd>Added <a href="01_agama/madhyama/MA_153.html">MĀ 153 Sugandika</a></dd>
   <dt>7-Jan-2023</dt>
-    <dd><a href="01_agama/ekottarika/01/EA_01_01.html">EĀ 1.1 Introduction</a></dd>
+    <dd>Added <a href="01_agama/ekottarika/01/EA_01_01.html">EĀ 1.1 Introduction</a></dd>
   <dt>28-Nov-2022</dt>
+    <dd>Translations added:</dd>
     <dd><a href="01_agama/madhyama/MA_056.html">MĀ 56 Meghiya</a></dd>
     <dd><a href="01_agama/madhyama/MA_058.html">MĀ 58 The Seven Treasures</a></dd>
     <dd><a href="01_agama/madhyama/MA_084.html">MĀ 84 Thornless</a></dd>
     <dd><a href="01_agama/madhyama/MA_127.html">MĀ 127 Fields of Merit</a></dd>
   <dt>30-Jul-2022</dt>
-    <dd><a href="01_agama/dirgha/DA_19.html">DĀ 19 The Great Congregation</a> added</dd>
+    <dd>Added <a href="01_agama/dirgha/DA_19.html">DĀ 19 The Great Congregation</a></dd>
     <dd>The initial release of the Long Discourses is complete!</dd>
   <dt>3-Jul-2022</dt>
-    <dd><a href="01_agama/dirgha/DA_30-12.html">DĀ 30, Chapter 12: The Origins of the World</a> added</dd>
+    <dd>Added <a href="01_agama/dirgha/DA_30-12.html">DĀ 30, Chapter 12: The Origins of the World</a></dd>
   <dt>1-Jul-2022</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/dirgha/DA_30-8.html">DĀ 30, Chapter 8: The Trāyastriṃśa Gods</a></dd>
