Revised MA 1, added EA 12.6-9.

--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,13 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>30-Jun-2023</dt>
+    <dd>Revised <a href="01_agama/madhyama/MA_001.html">MĀ 1 The Good Dharma</a></dd>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/ekottarika/12/EA_12_06.html">EĀ 12.6 Senior Years</a></dd>
+    <dd><a href="01_agama/ekottarika/12/EA_12_07.html">EĀ 12.7 Devadatta</a></dd>
+    <dd><a href="01_agama/ekottarika/12/EA_12_08.html">EĀ 12.8 Devadatta (2)</a></dd>
+    <dd><a href="01_agama/ekottarika/12/EA_12_09.html">EĀ 12.9 Skin</a></dd>
   <dt>29-Jun-2023</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/12/EA_12_02.html">EĀ 12.2 Spitefulness</a></dd>
