--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,11 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>12-Jul-2023</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/ekottarika/12/EA_12_10.html">EĀ 12.10 Śrīla</a></dd>
+    <dd><a href="01_agama/ekottarika/13/EA_13_01.html">EĀ 13.1 Surādha</a></dd>
+    <dd><a href="01_agama/ekottarika/13/EA_13_02.html">EĀ 13.2 Enjoyment of Desires</a></dd>
   <dt>30-Jun-2023</dt>
     <dd>Revised <a href="01_agama/madhyama/MA_001.html">MĀ 1 The Good Dharma</a></dd>
     <dd>Translations added:</dd>
