--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,10 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>23-Jul-2023</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/ekottarika/13/EA_13_03.html">EĀ 13.3 Nāḷijaṅgha</a></dd>
+    <dd><a href="01_agama/ekottarika/13/EA_13_04.html">EĀ 13.4 Nakula</a></dd>
   <dt>12-Jul-2023</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/12/EA_12_10.html">EĀ 12.10 Śrīla</a></dd>
