--- a/00_chinese_glossary/pronunciation.html
+++ b/00_chinese_glossary/pronunciation.html
@@ -4007,4 +4007,16 @@ base: ../
   <td>拔</td><td>băt</td><td>bʌt</td><td>pa</td><td>pa</td><td>bá</td><td><em>524>516</em></td>
 </tr>
 
+<tr>
+  <td>釋</td><td>thiak</td><td>ʃɪɛk</td><td>sɪəi</td><td>ṣï</td><td>shì</td><td><em>1360>1359</em></td>
+</tr>
+
+<tr>
+  <td>桓</td><td>ɦuan</td><td>ɦuan</td><td>huon</td><td>huan</td><td>huán</td><td><em>645</em></td>
+</tr>
+
+<tr>
+  <td>因</td><td>•ien</td><td>•iĕn</td><td>iən</td><td>iən</td><td>yīn</td><td><em>259</em></td>
+</tr>
+
 </article>
