--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,11 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>25-Jul-2023</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/ekottarika/13/EA_13_05.html">EĀ 13.5 Nakula</a>
+    <dd><a href="01_agama/ekottarika/13/EA_13_06.html">EĀ 13.6 Good Deeds</a></dd>
+    <dd><a href="01_agama/ekottarika/13/EA_13_07.html">EĀ 13.7 Śakra the Lord of Gods</a>
   <dt>23-Jul-2023</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/13/EA_13_03.html">EĀ 13.3 Nāḷijaṅgha</a></dd>
