--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,12 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>27-Jul-2023</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/ekottarika/14/EA_14_01.html">EĀ 14.1 Killing Beings</a>
+    <dd><a href="01_agama/ekottarika/14/EA_14_02.html">EĀ 14.2 Not Killing Beings</a>
+    <dd><a href="01_agama/ekottarika/14/EA_14_03.html">EĀ 14.3 Stealing</a>
+    <dd><a href="01_agama/ekottarika/14/EA_14_04.html">EĀ 14.4 Generosity</a>
   <dt>25-Jul-2023</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/13/EA_13_05.html">EĀ 13.5 Nakula</a>
