--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,14 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>31-Jul-2023</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/ekottarika/14/EA_14_05.html">EĀ 14.5 Wrong Sex</a>
+    <dd><a href="01_agama/ekottarika/14/EA_14_06.html">EĀ 14.6 No Wrong Sex</a>
+    <dd><a href="01_agama/ekottarika/14/EA_14_07.html">EĀ 14.7 False Speech</a>
+    <dd><a href="01_agama/ekottarika/14/EA_14_08.html">EĀ 14.8 Not Speaking Falsely</a>
+    <dd><a href="01_agama/ekottarika/14/EA_14_09.html">EĀ 14.9 Drinking Alcohol</a>
+    <dd><a href="01_agama/ekottarika/14/EA_14_10.html">EĀ 14.10 Not Drinking Alcohol</a>
   <dt>27-Jul-2023</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/14/EA_14_01.html">EĀ 14.1 Killing Beings</a>
