--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,18 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>30-Aug-2023</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/ekottarika/15/EA_15_01.html">EĀ 15.1 Two Kinds of Views</a>
+    <dd><a href="01_agama/ekottarika/15/EA_15_02.html">EĀ 15.2 Two Kinds of Views (2)</a>
+    <dd><a href="01_agama/ekottarika/15/EA_15_03.html">EĀ 15.3 Two Kinds of Gifts</a>
+    <dd><a href="01_agama/ekottarika/15/EA_15_04.html">EĀ 15.4 Two Kinds of Work</a>
+    <dd><a href="01_agama/ekottarika/15/EA_15_05.html">EĀ 15.5 Two Kinds of Favors</a>
+    <dd><a href="01_agama/ekottarika/15/EA_15_06.html">EĀ 15.6 Two Signs of a Fool</a>
+    <dd><a href="01_agama/ekottarika/15/EA_15_07.html">EĀ 15.7 Honoring the Tathāgata</a>
+    <dd><a href="01_agama/ekottarika/15/EA_15_08.html">EĀ 15.8 Honoring the Dharma</a>
+    <dd><a href="01_agama/ekottarika/15/EA_15_09.html">EĀ 15.9 Honoring the Tathāgata’s Shrine</a>
+    <dd><a href="01_agama/ekottarika/15/EA_15_10.html">EĀ 15.10 Right View</a>
   <dt>31-Jul-2023</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/14/EA_14_05.html">EĀ 14.5 Wrong Sex</a>
