--- a/whats-new.html
+++ b/whats-new.html
@@ -6,37 +6,40 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>31-Aug-2023</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/ekottarika/16/EA_16_01.html">EĀ 16.1 Nanda</a></dd>
   <dt>30-Aug-2023</dt>
     <dd>Translations added:</dd>
-    <dd><a href="01_agama/ekottarika/15/EA_15_01.html">EĀ 15.1 Two Kinds of Views</a>
-    <dd><a href="01_agama/ekottarika/15/EA_15_02.html">EĀ 15.2 Two Kinds of Views (2)</a>
-    <dd><a href="01_agama/ekottarika/15/EA_15_03.html">EĀ 15.3 Two Kinds of Gifts</a>
-    <dd><a href="01_agama/ekottarika/15/EA_15_04.html">EĀ 15.4 Two Kinds of Work</a>
-    <dd><a href="01_agama/ekottarika/15/EA_15_05.html">EĀ 15.5 Two Kinds of Favors</a>
-    <dd><a href="01_agama/ekottarika/15/EA_15_06.html">EĀ 15.6 Two Signs of a Fool</a>
-    <dd><a href="01_agama/ekottarika/15/EA_15_07.html">EĀ 15.7 Honoring the Tathāgata</a>
-    <dd><a href="01_agama/ekottarika/15/EA_15_08.html">EĀ 15.8 Honoring the Dharma</a>
-    <dd><a href="01_agama/ekottarika/15/EA_15_09.html">EĀ 15.9 Honoring the Tathāgata’s Shrine</a>
-    <dd><a href="01_agama/ekottarika/15/EA_15_10.html">EĀ 15.10 Right View</a>
+    <dd><a href="01_agama/ekottarika/15/EA_15_01.html">EĀ 15.1 Two Kinds of Views</a></dd>
+    <dd><a href="01_agama/ekottarika/15/EA_15_02.html">EĀ 15.2 Two Kinds of Views (2)</a></dd>
+    <dd><a href="01_agama/ekottarika/15/EA_15_03.html">EĀ 15.3 Two Kinds of Gifts</a></dd>
+    <dd><a href="01_agama/ekottarika/15/EA_15_04.html">EĀ 15.4 Two Kinds of Work</a></dd>
+    <dd><a href="01_agama/ekottarika/15/EA_15_05.html">EĀ 15.5 Two Kinds of Favors</a></dd>
+    <dd><a href="01_agama/ekottarika/15/EA_15_06.html">EĀ 15.6 Two Signs of a Fool</a></dd>
+    <dd><a href="01_agama/ekottarika/15/EA_15_07.html">EĀ 15.7 Honoring the Tathāgata</a></dd>
+    <dd><a href="01_agama/ekottarika/15/EA_15_08.html">EĀ 15.8 Honoring the Dharma</a></dd>
+    <dd><a href="01_agama/ekottarika/15/EA_15_09.html">EĀ 15.9 Honoring the Tathāgata’s Shrine</a></dd>
+    <dd><a href="01_agama/ekottarika/15/EA_15_10.html">EĀ 15.10 Right View</a></dd>
   <dt>31-Jul-2023</dt>
     <dd>Translations added:</dd>
-    <dd><a href="01_agama/ekottarika/14/EA_14_05.html">EĀ 14.5 Wrong Sex</a>
-    <dd><a href="01_agama/ekottarika/14/EA_14_06.html">EĀ 14.6 No Wrong Sex</a>
-    <dd><a href="01_agama/ekottarika/14/EA_14_07.html">EĀ 14.7 False Speech</a>
-    <dd><a href="01_agama/ekottarika/14/EA_14_08.html">EĀ 14.8 Not Speaking Falsely</a>
-    <dd><a href="01_agama/ekottarika/14/EA_14_09.html">EĀ 14.9 Drinking Alcohol</a>
-    <dd><a href="01_agama/ekottarika/14/EA_14_10.html">EĀ 14.10 Not Drinking Alcohol</a>
+    <dd><a href="01_agama/ekottarika/14/EA_14_05.html">EĀ 14.5 Wrong Sex</a></dd>
+    <dd><a href="01_agama/ekottarika/14/EA_14_06.html">EĀ 14.6 No Wrong Sex</a></dd>
+    <dd><a href="01_agama/ekottarika/14/EA_14_07.html">EĀ 14.7 False Speech</a></dd>
+    <dd><a href="01_agama/ekottarika/14/EA_14_08.html">EĀ 14.8 Not Speaking Falsely</a></dd>
+    <dd><a href="01_agama/ekottarika/14/EA_14_09.html">EĀ 14.9 Drinking Alcohol</a></dd>
+    <dd><a href="01_agama/ekottarika/14/EA_14_10.html">EĀ 14.10 Not Drinking Alcohol</a></dd>
   <dt>27-Jul-2023</dt>
     <dd>Translations added:</dd>
-    <dd><a href="01_agama/ekottarika/14/EA_14_01.html">EĀ 14.1 Killing Beings</a>
-    <dd><a href="01_agama/ekottarika/14/EA_14_02.html">EĀ 14.2 Not Killing Beings</a>
-    <dd><a href="01_agama/ekottarika/14/EA_14_03.html">EĀ 14.3 Stealing</a>
-    <dd><a href="01_agama/ekottarika/14/EA_14_04.html">EĀ 14.4 Generosity</a>
+    <dd><a href="01_agama/ekottarika/14/EA_14_01.html">EĀ 14.1 Killing Beings</a></dd>
+    <dd><a href="01_agama/ekottarika/14/EA_14_02.html">EĀ 14.2 Not Killing Beings</a></dd>
+    <dd><a href="01_agama/ekottarika/14/EA_14_03.html">EĀ 14.3 Stealing</a></dd>
+    <dd><a href="01_agama/ekottarika/14/EA_14_04.html">EĀ 14.4 Generosity</a></dd>
   <dt>25-Jul-2023</dt>
     <dd>Translations added:</dd>
-    <dd><a href="01_agama/ekottarika/13/EA_13_05.html">EĀ 13.5 Nakula</a>
+    <dd><a href="01_agama/ekottarika/13/EA_13_05.html">EĀ 13.5 Nakula</a></dd>
     <dd><a href="01_agama/ekottarika/13/EA_13_06.html">EĀ 13.6 Good Deeds</a></dd>
-    <dd><a href="01_agama/ekottarika/13/EA_13_07.html">EĀ 13.7 Śakra the Lord of Gods</a>
+    <dd><a href="01_agama/ekottarika/13/EA_13_07.html">EĀ 13.7 Śakra the Lord of Gods</a></dd>
   <dt>23-Jul-2023</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/13/EA_13_03.html">EĀ 13.3 Nāḷijaṅgha</a></dd>
