--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,13 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>20-Dec-2023</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/samyukta/01/SA1_25.html">SĀ 1.25 Tying Bonds</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_26.html">SĀ 1.26 What Affects</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_27.html">SĀ 1.27 Shaken</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_28.html">SĀ 1.28 Kappa’s Question</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_29.html">SĀ 1.29 Rāhula’s Question</a></dd>
   <dt>19-Dec-2023</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/01/SA1_23.html">SĀ 1.23 Not Mine</a></dd>
