--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,9 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>21-Dec-2023</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/samyukta/01/SA1_30.html">SĀ 1.30 Rāhula’s Question (2)</a></dd>
   <dt>20-Dec-2023</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/01/SA1_25.html">SĀ 1.25 Tying Bonds</a></dd>
