--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,12 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>27-Dec-2023</dt>
+    <dd><a href="01_agama/samyukta/01/SA1_31.html">SĀ 1.31 Well Versed</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_32.html">SĀ 1.32 The Well Taught Dharma</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_33.html">SĀ 1.33 Going from One Principle to the Next</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_34.html">SĀ 1.34 Nirvāṇa</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_35.html">SĀ 1.35 Samṛddhi’s Question</a></dd>
   <dt>21-Dec-2023</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/01/SA1_30.html">SĀ 1.30 Rāhula’s Question (2)</a></dd>
