--- a/whats-new.html
+++ b/whats-new.html
@@ -12,6 +12,7 @@ title: Dharma Pearls | What’s New
     <dd><a href="01_agama/samyukta/01/SA1_33.html">SĀ 1.33 Going from One Principle to the Next</a></dd>
     <dd><a href="01_agama/samyukta/01/SA1_34.html">SĀ 1.34 Nirvāṇa</a></dd>
     <dd><a href="01_agama/samyukta/01/SA1_35.html">SĀ 1.35 Samṛddhi’s Question</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_36.html">SĀ 1.36 Śroṇa</a></dd>
   <dt>21-Dec-2023</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/01/SA1_30.html">SĀ 1.30 Rāhula’s Question (2)</a></dd>
