--- a/00_chinese_glossary/pronunciation.html
+++ b/00_chinese_glossary/pronunciation.html
@@ -4144,9 +4144,13 @@ base: ../
   <td>菩<sup>3</sup></td><td>buag</td><td>bo</td><td>p‘u</td><td>p‘u</td><td>pú</td><td><em>1115 > 1123</em></td>
 </tr>
 
+<tr>
+  <td>屢</td><td>g̊lɪug</td><td>lɪu</td><td>liu</td><td>lü</td><td>lǚ</td><td><em>386</em></td>
+</tr>
+
 <!-- work zone
-阿毘陀
-•a-bii-da
+輸屢那
+
 -->
 </table>
 </article>
