--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,12 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>30-Dec-2023</dt>
+    <dd><a href="01_agama/samyukta/01/SA1_37.html">SĀ 1.37 Śroṇa (2)</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_38.html">SĀ 1.38 Śroṇa (3)</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_39.html">SĀ 1.39 Ignorance</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_40.html">SĀ 1.40 Ignorance (2)</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_41.html">SĀ 1.41 Ignorance (3)</a></dd>
   <dt>27-Dec-2023</dt>
     <dd><a href="01_agama/samyukta/01/SA1_31.html">SĀ 1.31 Well Versed</a></dd>
     <dd><a href="01_agama/samyukta/01/SA1_32.html">SĀ 1.32 The Well Taught Dharma</a></dd>
