--- a/00_chinese_glossary/pronunciation.html
+++ b/00_chinese_glossary/pronunciation.html
@@ -4148,9 +4148,17 @@ base: ../
   <td>屢</td><td>g̊lɪug</td><td>lɪu</td><td>liu</td><td>lü</td><td>lǚ</td><td><em>386</em></td>
 </tr>
 
-<!-- work zone
-輸屢那
+<tr>
+  <td>睒 (=閃?)</td><td>thiam</td><td>ʃɪɛm</td><td>ʃɪem</td><td>ṣan</td><td>shǎn</td><td><em>n/a > 1399</em></td>
+</tr>
 
+<tr>
+  <td>富</td><td>pɪuəg</td><td>pɪəu</td><td>fu</td><td>fu</td><td>fù</td><td><em>365</em></td>
+</tr>
+
+<!-- work zone
+波羅㮈
+pua-la-na
 -->
 </table>
 </article>
