--- a/whats-new.html
+++ b/whats-new.html
@@ -6,7 +6,13 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>8-Jan-2024</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/samyukta/01/SA1_43.html">SĀ 1.43 Cessation</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_44.html">SĀ 1.44 Pūrṇa</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_45.html">SĀ 1.45 Chandaka</a></dd>
   <dt>30-Dec-2023</dt>
+    <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/01/SA1_37.html">SĀ 1.37 Śroṇa (2)</a></dd>
     <dd><a href="01_agama/samyukta/01/SA1_38.html">SĀ 1.38 Śroṇa (3)</a></dd>
     <dd><a href="01_agama/samyukta/01/SA1_39.html">SĀ 1.39 Ignorance</a></dd>
