Added SA 1.46 and 49.

--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,10 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>9-Jan-2024</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/samyukta/01/SA1_46.html">SĀ 1.46 Should Be Taught</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_49.html">SĀ 1.49 Lack of Knowledge</a></dd>
   <dt>8-Jan-2024</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/01/SA1_43.html">SĀ 1.43 Cessation</a></dd>
